--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mime": "^3.0.0",
     "mongoose": "^6.0.14",
     "nodemon": "^2.0.15"
   }
